moving_tiik/.metadata/.plugins/org.eclipse.cdt.ui/moving_tiik.build.log
15:32:23 **** Incremental Build of configuration Debug for project moving_tiik ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'treatData':
../Core/Src/main.c:449:9: error: 'speedTiik' undeclared (first use in this function)
  449 |         speedTiik = speed_tiik_temp;
      |         ^~~~~~~~~
../Core/Src/main.c:449:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:32:30 Build Failed. 2 errors, 0 warnings. (took 6s.964ms)

